# qubasic

./: .gitignore  CHANGELOG.md  README.md  conftest.py  pyproject.toml  qbasic.py  qubasic.py  requirements.txt  test_cures.py  test_features.py  test_gaps.py  test_qbasic.py  test_qubasic.py  todo.md
.github/workflows/: publish.yml  test.yml
examples/: bell.qb  grover3.qb  locc_teleport.qb  sweep_rx.qb
qbasic_core/: __init__.py  __main__.py  analysis.py  backend.py  classic.py  control_flow.py  debug.py  demos.py  display.py  engine.py  engine_state.py  errors.py  exec_context.py  executor.py  expression.py  file_io.py  gates.py  help_text.py  io_protocol.py  locc.py  locc_commands.py  locc_engine.py  locc_execution.py  memory.py  mock_backend.py  parser.py  patterns.py  profiler.py  program_mgmt.py  protocol.py  scope.py  screen.py  statements.py  strings.py  subs.py  sweep.py  terminal.py
qubasic_core/: __init__.py  __main__.py  algorithms.py  algos2.py  analysis.py  benchmarking.py  bosonic.py  cli.py  control_flow.py  debug.py  demos.py  display.py  dynamics.py  engine.py  engine_state.py  exec_context.py  executor.py  expression.py  file_io.py  gates.py  help_text.py  locc_commands.py  locc_engine.py  locc_execution.py  memory.py  noise_mixin.py  parser.py  patterns.py  pauliprop.py  profiler.py  program_mgmt.py  qec.py  qol.py  qudits.py  resources.py  statements.py  strings.py  subs.py  terminal.py
tests/: test_features.py  test_qubasic.py
