[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qubasic"
version = "0.2.0"
description = "Quantum BASIC Interactive Terminal"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Charles C. Norton", email = "machineelv@gmail.com"},
]
keywords = ["quantum", "computing", "qiskit", "basic", "repl", "simulator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "qiskit>=1.0",
    "qiskit-aer>=0.13",
    "numpy>=1.24",
    "psutil>=5.9",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/CharlesCNorton/qubasic"
Repository = "https://github.com/CharlesCNorton/qubasic"
Issues = "https://github.com/CharlesCNorton/qubasic/issues"

[project.optional-dependencies]
charts = ["plotille>=5.0"]
readline = ["pyreadline3>=3.4; sys_platform == 'win32'"]

[project.scripts]
qubasic = "qubasic:main"

[tool.setuptools]
py-modules = ["qubasic"]
packages = ["qubasic_core"]

[tool.setuptools.package-data]

[tool.setuptools.data-files]
"share/qubasic/examples" = ["examples/*.qb"]

[tool.coverage.run]
source = ["qubasic_core"]
omit = ["*/test_*"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
