[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qubasic"
version = "0.11.0"
description = "Quantum BASIC Interactive Terminal"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Charles C. Norton", email = "machineelv@gmail.com"},
]
keywords = ["quantum", "computing", "qiskit", "basic", "repl", "simulator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "qiskit>=1.0",
    "qiskit-aer>=0.13",
    "numpy>=1.24",
    "psutil>=5.9",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/CharlesCNorton/qubasic"
Repository = "https://github.com/CharlesCNorton/qubasic"
Issues = "https://github.com/CharlesCNorton/qubasic/issues"

[project.optional-dependencies]
charts = ["plotille>=5.0"]
readline = ["pyreadline3>=3.4; sys_platform == 'win32'"]

[project.scripts]
qubasic = "qubasic_core.cli:main"

[tool.setuptools]
packages = ["qubasic_core"]

[tool.setuptools.package-data]

[tool.setuptools.data-files]
"share/qubasic/examples" = ["examples/*.qb"]

[tool.pytest.ini_options]
markers = ["real_sim: test requires real Qiskit Aer simulation (no mock)"]

[tool.coverage.run]
source = ["qubasic_core"]
omit = ["*/test_*"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
# QBasicTerminal composes 20 mixins; each mixin accesses attributes the host
# class provides, which mypy cannot resolve in isolation. The codebase is
# intentionally gradually typed, so the strict per-method settings and the
# cross-mixin attribute check are disabled while keeping mypy useful for real
# type mismatches, undefined names, and signature checks.
disallow_untyped_defs = false
check_untyped_defs = false
warn_return_any = false
warn_unused_ignores = false
# attr-defined: cross-mixin attributes the host class provides.
# has-type: types behind the lazy __getattr__ re-exports cannot be inferred.
# misc/union-attr: mixin base-class attribute overlap and optional access.
disable_error_code = ["attr-defined", "has-type", "misc", "union-attr"]
